# articUtils

./: .flake8  .gitignore  README.md  makefile  pyproject.toml
articutils/fileRemote/: config.py  docker_command.py  sys_command.py
makefiles/: c.makefile  fileRemote.makefile  python.makefile
src/: isGit.c
src/python/: fileRemote.py
test/fileRemote/: test_config.py  test_docker_command.py  test_sys_command.py
test/files/: fileRemoteConfig.yaml
