[tool.poetry]
name = "articutils"
version = "0.1.0"
description = ""
authors = ["Artic42 <main@artic42.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.16.1"
cx-freeze = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
